Fix black checkboxes on ios chrome, safari

--- a/src/less/dropdowns.less
+++ b/src/less/dropdowns.less
@@ -34,6 +34,12 @@
   max-width: 100%;
   position: relative;
   vertical-align: middle;
+
+  .dropdown__toggle {
+    .rhinobox__input {
+      background-color: transparent;
+    }
+  }
 }
 
 
